# KAMI

./: .gitignore  PROGRESS.md
PLUGINS/base64-codec/: Cargo.toml  tool.toml
PLUGINS/base64-codec/src/: lib.rs
PLUGINS/csv-query/: Cargo.toml  tool.toml
PLUGINS/csv-query/src/: lib.rs
PLUGINS/hash-compute/: Cargo.toml
PLUGINS/json-query/: Cargo.toml
PLUGINS/jwt-decode/: Cargo.toml
PLUGINS/markdown-to-html/: Cargo.toml
PLUGINS/regex-extract/: Cargo.toml
PLUGINS/regex-extract/src/: wasm.rs
PLUGINS/text-diff/: Cargo.toml
PLUGINS/text-transform/: Cargo.toml
PLUGINS/url-parse/: Cargo.toml  tool.toml
PLUGINS/url-parse/src/: lib.rs
crates/kami-cli/src/: main.rs  shared.rs
crates/kami-cli/src/commands/: build.rs  build_package.rs  build_pipeline.rs  build_tests.rs  mod.rs  search.rs
crates/kami-engine/src/: bindings.rs  lib.rs
crates/kami-guest/src/: macros.rs
crates/kami-mcp/src/: handler.rs
crates/kami-mcp/src/dispatch/: initialize.rs  mod.rs  prompts_list.rs  resources_list.rs  tools_call.rs
crates/kami-protocol/src/mcp/: initialize.rs
crates/kami-runtime/src/: lib.rs  orchestrator.rs  rate_limiter.rs  runtime_config.rs  scheduler.rs
crates/kami-runtime/tests/: orchestrator.rs  scheduler.rs
crates/kami-transport-http/src/: server.rs
crates/kami-transport-http/tests/: router_integration.rs
crates/kami-transport-stdio/tests/: mcp_dispatch.rs  mcp_roundtrip.rs  server_integration.rs  tools_list.rs
