[package]
name = "hash-compute"
version = "0.1.0"
edition = "2021"
description = "KAMI plugin — compute SHA-256 or SHA-512 hash of any text"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { path = "../../crates/kami-guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

wit-bindgen = "0.51"
[workspace]
