[package]
name = "url-parse"
version = "0.1.0"
edition = "2021"
description = "KAMI plugin — parse URL components and extract query parameters"

[lib]
crate-type = ["cdylib"]

[dependencies]
kami-guest = { path = "../../crates/kami-guest" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

wit-bindgen = "0.51"
[workspace]
